# contests

./: CMakeLists.txt  README.md  kop.cpp  run.py  template.cpp  template_kop.cpp
contests/template/: p3.cpp
freeplay/kop/: kop2.cpp
freeplay/temp/: temp1.cpp  temp2.cpp
freeplay_kop/: kop1.cpp
